<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/wallpaper_splash"
    tools:context=".ui.activity.ActivityAbout">

    <ImageButton
        android:id="@+id/about_back_button"
        android:layout_width="@dimen/width_48"
        android:layout_height="@dimen/height_48"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_4"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        android:padding="@dimen/padding_8"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_about"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_75"
        android:layout_marginEnd="@dimen/margin_52"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_appname_logo_text_right"
        app:layout_constraintBottom_toBottomOf="@+id/about_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/about_back_button"
        app:layout_constraintTop_toTopOf="@+id/about_back_button" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_about">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_text"
                android:textSize="@dimen/font_16" />

            <TextView
                android:id="@+id/names_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/final_thanks"
                android:textSize="@dimen/font_18" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>