<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_asteroids"
    tools:context=".ActivityMarsWeatherSuns">

    <ImageButton
        android:id="@+id/ibAsteroidsBack"
        android:layout_width="@dimen/width_48"
        android:layout_height="@dimen/height_48"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_4"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        android:padding="@dimen/padding_8"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAsteroidsTittleToolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_36"
        android:background="@color/transparent"
        android:gravity="center"
        android:padding="@dimen/padding_4"
        android:text="@string/monitoring_asteroids"
        android:textAlignment="center"
        android:textSize="@dimen/font_20"
        app:layout_constraintBottom_toBottomOf="@+id/ibAsteroidsBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ibAsteroidsBack"
        app:layout_constraintTop_toTopOf="@+id/ibAsteroidsBack" />

    <SearchView
        android:id="@+id/searchViewAsteroids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:alpha="0.7"
        android:closeIcon="@drawable/ic_close_24dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_asteroids_by_date"
        android:searchIcon="@drawable/ic_search_24dp"
        android:theme="@style/SearchViewTextWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAsteroidsTittleToolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAsteroidsNear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginBottom="@dimen/margin_4"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/clLogoBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchViewAsteroids"
        tools:itemCount="4"
        tools:listitem="@layout/item_asteroids" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLogoBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvAsteroidsNear">

        <ImageView
            android:id="@+id/ivNasaLogoBottom"
            android:layout_width="@dimen/width_60"
            android:layout_height="@dimen/height_60"
            android:src="@drawable/ic_nasa_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvNasaLogoBottom"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNasaLogoBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_4"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="@dimen/font_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivNasaLogoBottom"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>